# tprint

./: LICENSE  README.md  pyproject.toml
src/tprint/: __init__.py  __main__.py  cli.py  formatters.py  parsers.py
src/tprint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
