[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tprint"
version = "0.1.0"
description = "Terminal Table Printer — pipe structured data (JSON, CSV, YAML, TOML, Markdown) into beautiful terminal tables"
readme = "README.md"
authors = [
    { name = "AFS Agentics", email = "opensource@afsagentics.dev" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["cli", "table", "terminal", "json", "csv", "yaml", "toml", "markdown", "rich"]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/AFS-Agentics/tprint"
Repository = "https://github.com/AFS-Agentics/tprint"
Documentation = "https://github.com/AFS-Agentics/tprint#readme"

[project.scripts]
tprint = "tprint.cli:run"

[tool.setuptools.packages.find]
where = ["src"]
